# avalanche-rs

./: .dockerignore  .gitignore  BENCHMARK.md  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  SESSION3_SUMMARY.md  bench.sh  build.rs  docker-compose.yml
.github/workflows/: ci.yml  release.yml
bench_go/: bench_go  main.go
benches/: BASELINE.md  block_parsing.rs  bloom_filter.rs  bls_verify.rs  codec_bench.rs  consensus_bench.rs  p2p_codec.rs  rpc_handling.rs  trie_ops.rs
blog/: introducing-avalanche-rs.md
crates/avalanche-core/: Cargo.toml
crates/avalanche-core/src/: block.rs  bloom.rs  codec.rs  lib.rs  types.rs
crates/avalanche-wasm/: Cargo.toml
crates/avalanche-wasm/src/: lib.rs
data/avalanche-rs/db/: IDENTITY  LOG  LOG.old.1772653868140656  MANIFEST-000013  OPTIONS-000007  OPTIONS-000015
data/test-phase4/db/: IDENTITY  LOG  MANIFEST-000005
docs/: DEPLOYMENT.md  MAINNET_SYNC.md  alerts.yml  prometheus.yml
docs/grafana/: dashboard.json
docs/plans/: 2026-03-04-phase3-block-storage-recursive-fetch.md  2026-03-04-phase8-link-blocks-validator-state-trie.md  2026-03-04-ping-pong-peer-dialing-bootstrap.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_parse.rs  bloom_parse.rs  protobuf_parse.rs  rlp_decode.rs  rpc_input.rs
src/: lib.rs  main.rs
src/archive/: mod.rs
src/blob/: mod.rs
src/block/: mod.rs
src/cache/: mod.rs
src/codec/: mod.rs
src/consensus/: mod.rs
src/db/: mod.rs
src/debug/: mod.rs
src/evm/: mod.rs
src/fortuna/: mod.rs
src/granite/: mod.rs
src/hardening/: mod.rs
src/identity/: mod.rs
src/light/: mod.rs
src/mempool/: mod.rs
src/metrics/: mod.rs
src/mev/: engine.rs  mod.rs  v4.rs
src/network/: mod.rs
src/observability/: mod.rs
src/proto/: mod.rs
src/rpc/: mod.rs
src/snap/: mod.rs
src/subnet/: mod.rs
src/sync/: mod.rs
src/tx/: mod.rs
src/txpool/: mod.rs
src/types/: mod.rs
src/validator/: mod.rs
src/warp/: mod.rs
src/websocket/: mod.rs
tests/: integration_tests.rs
