[package]
name = "avalanche-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for avalanche-core: block parsing, BLS verification, bloom filter"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
avalanche-core = { path = "../avalanche-core", default-features = false, features = ["std"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
